--- a/ansible/hosts.ini
+++ b/ansible/hosts.ini
@@ -1,2 +1,2 @@
 [web]
-0.0.0.0
+34.204.181.140 ansible_user=ec2-user ansible_ssh_private_key_file=./parquemagicopem.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
